--- a/src/TaskFormModal.css
+++ b/src/TaskFormModal.css
@@ -1,53 +1,49 @@
 /* TaskFormModal.css */
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    background: white;
-    padding: 30px;
-    padding-right: 50px;
-    border-radius: 20px;
-    width: 60%; /* Adjust the width as needed */
-    max-width: 600px; /* Set a maximum width if desired */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  .modal-content input,
-  .modal-content textarea {
-    width: calc(100% - 20px); /* Adjusted width to leave space for padding */
-    padding: 10px;
-    margin-bottom: 15px;
-    font-size: 16px;
-  }
-  
-  /* Style the task description field specifically */
-  .modal-content textarea.task-description {
-    height: 150px; /* Adjust the height as needed */
-    resize: vertical; /* Allow vertical resizing if needed */
-  }
-  
-  .modal-content button {
-    background-color: #0074d9;
-    color: #fff;
-    border: none;
-    border-radius: 40px;
-    padding: 12px 24px;
-    cursor: pointer;
-  }
-  
-  .modal-content button.close-button {
-    background-color: #d9534f;
-    margin-left: 10px;
-  }
-  
-  /* Add more styles as needed for the modal */
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: white;
+  padding: 30px;
+  padding-right: 50px;
+  border-radius: 20px;
+  width: 60%;
+  max-width: 600px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.modal-content input,
+.modal-content textarea {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 15px;
+  font-size: 16px;
+}
+
+.modal-content textarea.task-description {
+  height: 150px;
+  resize: vertical;
+}
+
+.modal-content button {
+  background-color: #0074d9;
+  color: #fff;
+  border: none;
+  border-radius: 40px;
+  padding: 12px 24px;
+  cursor: pointer;
+}
+
+.modal-content button.close-button {
+  background-color: #d9534f;
+  margin-left: 10px;
+}
