changed button css to make all modal window buttons same

--- a/src/App.css
+++ b/src/App.css
@@ -99,8 +99,33 @@ h1 {
 }
 
 .task-container button.edit-button {
-  background-color: #5bc0de;
+  background-color: #0074d9;
 }
+
+
+
+.modal-overlay button.savechangesbutton {
+  background-color: #0074d9;
+  color: #fff;
+  border: none;
+  border-radius: 40px;
+  padding: 12px 24px;
+  cursor: pointer;
+}
+
+.modal-overlay button.closeeditbutton {
+  background-color: #d9534f;
+  color: #fff;
+  border: none;
+  border-radius: 40px;
+  padding: 12px 24px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+
+
+
 
 /* ... (previous styles) */
 
