--- a/src/navbar.css
+++ b/src/navbar.css
@@ -1,18 +1,28 @@
-/* Navbar.css */
 .navbar {
   background-color: #333;
   padding: 10px;
   position: sticky;
   top: 0;
   z-index: 100;
-  color: white;
+  color: #fff;
   display: flex;
   justify-content: space-between; /* Align children at both ends of the flex container */
   align-items: center;
+  margin-bottom: 2%;
+}
+
+.navbar-logo {
+  height: 60px; /* Adjust the height as needed */
+  margin-right: 10px; /* Adjust the margin as needed */
 }
 
 .navbar h1 {
   margin: 0;
+  font-size: 150;
+  font-weight: bold;
+  font-family: Helvetica, arial;
+  
+  
 }
 
 .navbar-buttons {
@@ -29,5 +39,3 @@
   cursor: pointer;
   margin-left: 10px;
 }
-
-/* Add any additional styling as needed */
