--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html {background-color: #0ac6bf}
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #0ac6bf;
+  background-color: #333;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -167,4 +167,12 @@ h1 {
 
 .task-container {
   word-wrap: break-word;
+}
+
+.all-tasks-heading {
+  color: #fff;
+}
+
+.filters-container label{
+  color: #fff;
 }
