--- a/src/App.css
+++ b/src/App.css
@@ -186,3 +186,15 @@ h1 {
     margin-top: 10px; /* Add some top margin to separate from the above content */
   }
 }
+
+.error-text {
+  color: #fff; /* Set the color to white or your desired color */
+}
+
+.header-container {
+  display: flex;
+  flex-wrap: wrap; /* Allow items to wrap to the next line */
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
